results/SpecGenBench/2-shot/log-UniqueCharNested-2023_11_28_03_40_09.txt
public class UniqueCharNested {

    //@ requires s != null;
    //@ ensures \result == -1 <==> (\forall int i; 0 <= i && i < s.length(); (\forall int j; i+1 <= j && j < s.length(); s.charAt(i) != s.charAt(j)));
    //@ ensures 0 <= \result && \result < s.length() ==> (\forall int j; \result+1 <= j && j < s.length(); s.charAt(\result) != s.charAt(j));
    public static int uniqueChar(String s) {
        int j;
        //@ maintaining 0 <= i && i <= s.length();
        //@ maintaining (\forall int k; 0 <= k && k < i; (\forall int j; k+1 <= j && j < s.length(); s.charAt(k) != s.charAt(j)));
        //@ decreases s.length() - i;
        for (int i = 0; i < s.length(); ++i) {
            char c1 = s.charAt(i);
            //@ maintaining i+1 <= j && j <= s.length();
            //@ maintaining (\forall int k; i+1 <= k && k < j; s.charAt(i) != s.charAt(k));
            //@ decreases s.length() - j;
            for (j = i + 1; j < s.length(); ++j) {
                char c2 = s.charAt(j);
                if(c1 == c2)
                    break;
            }
            if(j == s.length())
                return i;
        }
        return -1;
    }
    
}
/home/max/Documents/JMLGPT/tmp/UniqueCharNested.java:9: error: variable j is already defined in method uniqueChar(String)
        //@ maintaining (\forall int k; 0 <= k && k < i; (\forall int j; k+1 <= j && j < s.length(); s.charAt(k) != s.charAt(j)));
                                                                      ^
1 error

